--- a/common.css
+++ b/common.css
@@ -146,14 +146,14 @@ main{
     gap: 30px;
  }
  .menu-option{
-   background: rgba(240, 237, 232, 0.946);
+   background:#3f75c669;
    border-radius: 10px;
    min-width:260px;
-   height: 270px;
+   height: 260px;
    padding: 30px;
  }
  .menu-option div{
-    background-color: #DD0000;
+    background-color: #f51e1ef4;
     padding:20px;
     border-radius: 8px;
     text-align: center;
@@ -163,7 +163,7 @@ main{
 
  .menu-option a{
    text-decoration: none;
-   color: black;
+   color: rgb(239, 226, 226);
  }
  .menu-option div:hover{
    -ms-transform: scale(1.2);
@@ -179,8 +179,34 @@ main{
    .design{
    width: 312px;
    height: 362px;
-   border: 1px solid rgba(239, 9, 9, 0.937);
+   border: 1px solid rgba(217, 203, 203, 0.937);
    border-radius: 10px;
+}
+.click-para{
+   margin: 10px;
+
+}
+.click-para button{
+   background-color: rgb(247, 252, 254);
+   border: none;
+   border-radius: 3px;
+   padding: 2px;
+   font-weight: 700;
+}
+.click-para a{
+   color: #02313c;
+}
+.click-para button:hover{
+    -ms-transform: scale(1.3);
+   -webkit-transform: scale(1.3);
+    transform: scale(1.2);
+  
+}
+.click-para a:hover{
+   text-decoration: none;
+}
+.time-chat{
+   margin: 10px;
 }
 
 /*------------------------------------
