--- a/common.css
+++ b/common.css
@@ -1,300 +1,373 @@
- /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+/* Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /* Common CSS Started */
 
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #226ee0ae;
-
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #226ee0ae;
 }
- header{
-    background-color: #3364ba;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 80px 1000px 310px 80px;
+header {
+  background-color: #3364ba;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 80px 1000px 310px 80px;
 }
- header > div {
-    font-size: 18px;
- }
- .left img{
-    padding-left: 60px;
- }
- .uses {
-    text-decoration: none;
-    padding-top: 25px;
-    padding-left: 60px;
- }
- .uses a{
-    text-decoration: none;
-    padding-left: 10px;
- }
- .uses .active{
-    font-size: 30px;
-    color: bisque;
- }
- .uses:hover{
-    color: navajowhite;
- }
- .uses a:hover{
-    color: yellow;
- }
- .user{
-    padding-top: 30px;
-    padding-left: 90px;
- }
- .user a{
-    padding-left: 10px;
-    text-decoration: none;
-    color: rgb(3, 7, 3);
- }
- .user .active{
-    color: rgb(198, 84, 3);
-    font-size: 23px;
- }
+header > div {
+  font-size: 18px;
+}
+.left img {
+  padding-left: 60px;
+}
+.uses {
+  text-decoration: none;
+  padding-top: 25px;
+  padding-left: 60px;
+}
+.uses a {
+  text-decoration: none;
+  padding-left: 10px;
+}
+.uses .active {
+  font-size: 30px;
+  color: bisque;
+}
+.uses:hover {
+  color: navajowhite;
+}
+.uses a:hover {
+  color: yellow;
+}
+.user {
+  padding-top: 30px;
+  padding-left: 90px;
+}
+.user a {
+  padding-left: 10px;
+  text-decoration: none;
+  color: rgb(3, 7, 3);
+}
+.user .active {
+  color: rgb(198, 84, 3);
+  font-size: 23px;
+}
 
-  /*----------------------
+/*----------------------
     Main Section Started
   ---------------------- */
-main{
-     margin: 30px 100px 0px 100px;
+main {
+  margin: 30px 100px 0px 100px;
 }
-.banner{
-    display:flex;
-    background-color: #3574d2;
-    margin-bottom: 130px;
-    position: relative;
+.banner {
+  display: flex;
+  background-color: #3574d2;
+  margin-bottom: 130px;
+  position: relative;
 }
-.banner{
-    border-radius: 20px;
-    width: 1321px;
-    height: 646px;
+.banner {
+  border-radius: 20px;
+  width: 1321px;
+  height: 646px;
 }
-.banner-text{
-    margin-top: 30px;
-    margin-left: 100px;
-    width: 40%;
+.banner-text {
+  margin-top: 30px;
+  margin-left: 100px;
+  width: 40%;
 }
-.banner-text h1{
-    color: white;
-    font-weight: 700;
-    font-size: 65px;
-    width: 500px;
-    height: 200px;
+.banner-text h1 {
+  color: white;
+  font-weight: 700;
+  font-size: 65px;
+  width: 500px;
+  height: 200px;
 }
-.banner-text h1:hover{
-    color: #00ffbf;
-    }
-.banner-text p{
-    width: 506px;
-    height: 78px;
-    font-size: 17px;
-    padding-bottom: 30px;
+.banner-text h1:hover {
+  color: #00ffbf;
 }
-.banner-text p:hover{
-    color: bisque;
-    font-size: 18px;
+.banner-text p {
+  width: 506px;
+  height: 78px;
+  font-size: 17px;
+  padding-bottom: 30px;
 }
-.banner-text a{
-    text-decoration: none;
-    color: bisque;;
+.banner-text p:hover {
+  color: bisque;
+  font-size: 18px;
 }
-.banner-text button{
-    background-color: rgb(239, 14, 14);;
-    margin-top: 15px;
-    color: bisque;
-    font-size: 20px;
-    padding: 15px 25px;
-    border: none;
-    border-radius: 5px;
- }
- .banner-text button:hover{
-    -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.1);
-
- }
- .goat{
-    width: 45%;
-    padding-right: 100px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    position: absolute;
-    bottom: -7px;
-    right: 0;
- }
- .goat img{
-    width: 670px;
-    height: 640px;
-    transition: transform .4s;
-    transition-timing-function: ease-in-out;
- }
-.banner img:hover{
-    -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.1);
+.banner-text a {
+  text-decoration: none;
+  color: bisque;
+}
+.banner-text button {
+  background-color: rgb(239, 14, 14);
+  margin-top: 15px;
+  color: bisque;
+  font-size: 20px;
+  padding: 15px 25px;
+  border: none;
+  border-radius: 5px;
+}
+.banner-text button:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
+}
+.goat {
+  width: 45%;
+  padding-right: 100px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  position: absolute;
+  bottom: -7px;
+  right: 0;
+}
+.goat img {
+  width: 670px;
+  height: 640px;
+  transition: transform 0.4s;
+  transition-timing-function: ease-in-out;
+}
+.banner img:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /*------------------------------------
    Menu & Content section started
  ---------------------------------- */
- .contents{
-    display: grid;
-    grid-template-columns: 1fr 3.4fr;
-    gap: 30px;
- }
- .menu-option{
-   background:#3f75c669;
-   border-radius: 10px;
-   min-width:260px;
-   height: 260px;
-   padding: 30px;
- }
- .menu-option div{
-    background-color: #f51e1ef4;
-    padding:20px;
-    border-radius: 8px;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 18px;
- }
+.contents {
+  display: grid;
+  grid-template-columns: 1fr 3.4fr;
+  gap: 30px;
+}
+.menu-option {
+  position: sticky;
+  top: 20px;
+  background: #3f75c669;
+  border-radius: 10px;
+  min-width: 260px;
+  height: 260px;
+  padding: 30px;
+}
+.menu-option div {
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 18px;
+}
 
- .menu-option a{
-   text-decoration: none;
-   color: rgb(239, 226, 226);
- }
- .menu-option div:hover{
-   -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.1);
- }
- .blogs{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 30px;
-    }
+.menu-option a {
+  text-decoration: none;
+  color: rgb(10, 10, 10);
+}
+.menu-option div:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
+}
+.option-1 {
+  background-color: #efefeff4;
+}
+.option-2 {
+  background-color: #efefeff4;
+}
+.option-3 {
+  background-color: crimson;
+}
+.option-3 a {
+  color: aliceblue;
+}
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+.blogs .design:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
+}
 
-   .design{
-   width: 312px;
-   height: 362px;
-   border: 1px solid rgba(217, 203, 203, 0.937);
-   border-radius: 10px;
+.design {
+  width: 312px;
+  height: 362px;
+  border: 1px solid rgba(217, 203, 203, 0.937);
+  border-radius: 10px;
 }
-.click-para{
-   margin: 10px;
-
+.design img {
+  border-radius: 10px 10px 0 0;
 }
-.click-para button{
-   background-color: rgb(247, 252, 254);
-   border: none;
-   border-radius: 3px;
-   padding: 2px;
-   font-weight: 700;
+.design img:hover {
+  transform: rotateY(180deg);
 }
-.click-para a{
-   color: #02313c;
+.click-para {
+  margin: 10px;
 }
-.click-para button:hover{
-    -ms-transform: scale(1.3);
-   -webkit-transform: scale(1.3);
-    transform: scale(1.2);
-  
+.click-para button {
+  background-color: rgb(247, 252, 254);
+  border-radius: 3px;
+  padding: 3px;
+  font-weight: 700;
 }
-.click-para a:hover{
-   text-decoration: none;
+.click-para a {
+  color: #02313c;
+  text-decoration: none;
 }
-.time-chat{
-   margin: 10px;
+.click-para button:hover {
+  -ms-transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  transform: scale(1.2);
+  background-color: crimson;
+}
+.click-para a:hover {
+  text-decoration: none;
+  color: aliceblue;
+}
+.time-chat {
+  margin: 12px;
+}
+.time-chat .fa-clock {
+  margin: 15px;
+  color: #00ffbf;
+}
+.time-chat .fa-comment-dots {
+  margin: 15px;
+  padding-left: 17px;
 }
 
 /*------------------------------------
-  Upcoming match CSS/Match.html CSS Here
- ---------------------------------- */
-   .upcoming-matches{
-      display: grid;
-      grid-template-columns: repeat(3,1fr);
-      gap: 30px; 
-      }
-
-   .match-details{
-      border: 1px solid rgba(239, 9, 9, 0.937);
-      border-radius: 10px;
-      padding: 40px;
-   }
-   .flags{
-      display: flex;
-      gap: 11px;
-      align-items: center;
-
-  }
-  .flags span{
-      font-weight: 700;
-  }
-  .flags img{
-      width: 100%;
-  }
-  .match-time{
-      text-align: center;
-  }
-  .match-time p{
-   opacity: 0.7;
+   Upcoming match CSS/Match.html CSS Here
+ ------------------------------------- */
+.no-1 {
+  background-color: crimson;
 }
-.match-details div:hover{
-   -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.1);
- }
+.no-2 {
+  background-color: aliceblue;
+}
+.no-3 {
+  background-color: aliceblue;
+}
+.no-1 a {
+  color: aliceblue;
+}
+.upcoming-matches {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.match-details {
+  border: 1px solid rgba(239, 9, 9, 0.937);
+  border-radius: 10px;
+  padding: 40px;
+}
+.flags {
+  display: flex;
+  gap: 11px;
+  align-items: center;
+}
+.flags span {
+  font-weight: 700;
+}
+.flags img {
+  width: 100%;
+}
+
+.match-time {
+  text-align: center;
+}
+.match-time p {
+  opacity: 0.7;
+}
+.match-details div:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
+}
+
+/*--------------------------------------------
+            Group page CSS Here Started
+ ----------------------------------------------*/
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap");
+.past {
+  background-color: aliceblue;
+}
+.present {
+  background-color: crimson;
+}
+.present a {
+  color: aliceblue;
+}
+.final-groups img {
+  border-radius: 10px;
+}
+.group-section {
+  background-color: brown;
+}
+.flexing {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: "Lobster Two", cursive;
+  font-weight: 600;
+}
+.flexing img {
+  border-radius: 7px;
+  padding: 5px;
+}
 /* ---------------
 footer Section CSS
 --------------- */
-footer{
-    text-align: center;
-    background-color: #226ee0;
+footer {
+  text-align: center;
+  background-color: #226ee0;
 }
-footer h2{
-    font-weight: 600;
-    font-size: 40px;
-    padding-top: 110px;
-    color: rgb(229, 229, 229);
+footer h2 {
+  font-weight: 600;
+  font-size: 40px;
+  padding-top: 110px;
+  color: rgb(229, 229, 229);
 }
-footer hr{
-   margin: 20px 150px 20px 150px;
-   opacity: 0.4;
+footer hr {
+  margin: 20px 150px 20px 150px;
+  opacity: 0.4;
 }
-.footer-nav a{
-    opacity: 0.7;
-    text-decoration: none;
-    color: #B9B9B9;
-    font-size: 16px;
+.footer-nav a {
+  opacity: 0.7;
+  text-decoration: none;
+  color: #b9b9b9;
+  font-size: 16px;
 }
-.footer-nav{
-    display: flex;
-    column-gap: 52px;
-    padding-top: 20px;
-    justify-content: center;
+.footer-nav {
+  display: flex;
+  column-gap: 52px;
+  padding-top: 20px;
+  justify-content: center;
 }
-.follow-us{
-    display: flex;
-    padding: 50px;
-    column-gap: 35px;
-    justify-content: center;
-    font-size: 35px;
+.follow-us {
+  display: flex;
+  padding: 50px;
+  column-gap: 35px;
+  justify-content: center;
+  font-size: 35px;
 }
 
- .follow-us .fb{
- color: lightcoral;
+.follow-us .fb {
+  color: lightcoral;
 }
- .follow-us .lin{
-   color: lightcoral;
+.follow-us .lin {
+  color: lightcoral;
 }
- .follow-us .git{
-   color: lightcoral;
+.follow-us .git {
+  color: lightcoral;
 }
-.footer-head h2:hover{
-   color: crimson;
-  }
-.footer-head a:hover{
-   color: snow;
- }
+.footer-head h2:hover {
+  color: crimson;
+}
+.footer-head a:hover {
+  color: snow;
+}
