--- a/common.css
+++ b/common.css
@@ -412,6 +412,9 @@ footer hr {
 .past {
   background-color: aliceblue;
 }
+.past- {
+  background-color: aliceblue;
+}
 .present {
   background-color: crimson;
 }
