--- a/responsive.css
+++ b/responsive.css
@@ -3,6 +3,9 @@
 ----------------------------------------------------- */
 /* Media Queries For Mobile Device */
 @media only screen and (max-width: 577px) {
+  body {
+    background-size: 100%;
+  }
   header {
     display: grid;
     grid-template-columns: 15px 300px 110px 20px;
@@ -181,7 +184,7 @@
     padding: 45px;
     justify-content: center;
     font-size: 22px;
-    row-gap: 30px;
+    row-gap: 20px;
   }
   /* group section contensts responsiveness */
   .past {
