--- a/common.css
+++ b/common.css
@@ -173,7 +173,7 @@ main {
 }
 .menu-option {
   position: sticky;
-  top: 0;
+  top: 40px;
   background: #3f75c669;
   border-radius: 10px;
   min-width: 260px;
