--- a/common.css
+++ b/common.css
@@ -282,17 +282,18 @@ main {
 /* View ALL Button For the Tablet User */
 .view-all {
   display: none;
-  text-align: center;
   margin: 60px;
 }
 .view-all button {
-  width: 131px;
-  height: 47px;
+  width: 143px;
+  height: 60px;
   color: white;
   background-color: #dd0000;
   padding: 12px 29px;
   border: none;
   border-radius: 5px;
+  font-size: 20px;
+  align-content: center;
 }
 /* ---------------
 footer Section CSS
