--- a/responsive.css
+++ b/responsive.css
@@ -362,6 +362,9 @@
   .design img {
     width: 100%;
   }
+  /* .flags img {
+    width: 100%;
+  } */
 
   /* View ALL for Tablet Version */
   .view-all {
