Worked on Responsiveness and Desging color

--- a/common.css
+++ b/common.css
@@ -2,22 +2,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /* Common CSS Started */
-
+* {
+  max-width: 100%;
+}
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #226ee0ae;
-  background: linear-gradient(to right, #c5bdbd, #5781b5,#01124a7b);
-  
+  background: linear-gradient(to right, #c5bdbd, #5781b5, #01124a7b);
 }
 header {
   background-color: #3364ba;
-  background: linear-gradient(120deg, #19221d, #ffffff);
-  background: linear-gradient(to bottom right, #ff00ffbe, #00f40069);
+  background: linear-gradient(120deg, #5d12b3, #121212);
+  background: linear-gradient(120deg, #138bd6, #e20505);
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 80px 1000px 315px 80px;
+  grid-template-columns: 40px 1000px 350spx 80px;
 }
 header > div {
   font-size: 18px;
@@ -28,7 +29,7 @@ header > div {
 .uses {
   text-decoration: none;
   padding-top: 14px;
-  padding-left: 60px;
+  padding-left: 10px;
 }
 .uses a {
   text-decoration: none;
@@ -37,6 +38,7 @@ header > div {
 }
 .uses .fa-bars {
   color: aliceblue;
+  padding-right: 5px;
 }
 .uses .active {
   font-size: 30px;
@@ -91,19 +93,18 @@ header > div {
     Main Section Started
   ---------------------- */
 main {
-  margin: 30px 100px 0px 100px;
+  margin: 30px 60px 0px 60px;
 }
 .banner {
   display: flex;
   background-color: #3574d2;
- 
+
   /* background: linear-gradient(to bottom right, #ff00ffbe, #00f40069); */
-  background: linear-gradient(120deg, #b78cdd, #a8ba32);
+   background: linear-gradient(120deg, #138bd6, #e20505);
   margin-bottom: 130px;
   position: relative;
   border-radius: 20px;
-  width: 1321px;
-  height: 646px;
+  height: 650px;
 }
 .banner-text {
   margin-top: 30px;
@@ -136,7 +137,7 @@ main {
 }
 .banner-text button {
   background-color: rgb(239, 14, 14);
-  background: linear-gradient(to right, #ff0000, #00ff009a);
+  background: linear-gradient(120deg, #138bd6, #e20505);
   margin-top: 15px;
   color: bisque;
   font-size: 20px;
@@ -177,20 +178,21 @@ main {
   display: grid;
   grid-template-columns: 1fr 3.4fr;
   gap: 30px;
-  padding-bottom: 80px;
+  padding-bottom: 60px;
+  max-width: 100%;
 }
 .menu-option {
   position: sticky;
   top: 40px;
   background: #3f75c669;
-  background: linear-gradient(to bottom right, #ff00ffbe, #00f40069);
+  background: linear-gradient(120deg, #138bd6, #e20505);
   border-radius: 10px;
-  min-width: 260px;
-  height: 260px;
+  min-width: 200px;
+  height: 245px;
   padding: 30px;
 }
 .menu-option div {
-  padding: 20px;
+  padding: 13.7px;
   border-radius: 8px;
   text-align: center;
   font-size: 20px;
@@ -214,7 +216,7 @@ main {
 }
 .option-3 {
   background-color: crimson;
-  background: linear-gradient(to right, #ff0000, #00ff00);
+ background: linear-gradient(120deg, #138bd6, #e20505);
 }
 .option-3 a {
   color: aliceblue;
@@ -222,7 +224,7 @@ main {
 .blogs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+  gap: 20px;
 }
 .blogs .design:hover {
   -ms-transform: scale(1.2);
@@ -231,16 +233,17 @@ main {
 }
 
 .design {
-  width: 312px;
-  height: 363px;
+  width: 245px;
+  height: 365px;
   border: 1px solid rgba(217, 203, 203, 0.937);
   border-radius: 10px;
   background-color: rgb(188, 223, 254);
   background: linear-gradient(to bottom right, #59ff00be, #00f4f069);
-  background: linear-gradient(to bottom right, #ff00ffbe, #00f40069);
+  background: linear-gradient(120deg, #138bd6, #e20505);
 }
 .design img {
   border-radius: 10px 10px 0 0;
+  width: 230px;
 }
 .design img:hover {
   transform: rotateY(180deg);
@@ -314,12 +317,12 @@ footer Section CSS
 footer {
   text-align: center;
   background-color: #226ee0;
-  background: linear-gradient(120deg, #2b3e4d, #20bf6b);
+ background: linear-gradient(120deg, #138bd6, #e20505);
 }
 footer h2 {
   font-weight: 600;
   font-size: 40px;
-  padding-top: 110px;
+  padding-top: 60px;
   color: rgb(229, 229, 229);
 }
 footer hr {
@@ -370,7 +373,7 @@ footer hr {
  ------------------------------------- */
 .no-1 {
   background-color: crimson;
-  background: linear-gradient(to right, #ff0000, #00ff00);
+ background: linear-gradient(120deg, #138bd6, #e20505);
 }
 .no-2 {
   background-color: aliceblue;
@@ -392,7 +395,7 @@ footer hr {
   border-radius: 10px;
   padding: 40px;
   background-color: rgb(188, 223, 254);
-  background: linear-gradient(120deg, #3fa5f5, #20bf6b);
+  background: linear-gradient(120deg, #138bd6, #e20505);
 }
 .flags {
   display: flex;
@@ -435,14 +438,14 @@ footer hr {
 }
 .present {
   background-color: crimson;
-  background: linear-gradient(to right, #ff0000, #00ff00);
+background: linear-gradient(120deg, #138bd6, #e20505);
 }
 .present a {
   color: aliceblue;
 }
 .final-groups {
   background-color: rgb(188, 223, 254);
-  background: linear-gradient(to bottom right, #ff00ffbe, #00f40069);
+ background: linear-gradient(120deg, #138bd6, #e20505);
   border: 1px solid rgba(252, 203, 203, 0.698);
   border-radius: 10px;
   padding: 40px;
